# framework64

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  arcball.c  arcball.h  assets.h  box.c  box.h  build_all.sh  camera.c  camera.h  color.h  cube.c  cube.h  dynamic.h  entity.c  entity.h  game.c  game.h  graphic.h  input.c  input.h  main.c  matrix.c  matrix.h  package-lock.json  package.json  quad.c  quat.c  quat.h  renderer.c  renderer.h  static_model.c  static_model.h  texture.c  texture.h  transform.c  (+5 more)
components/: CMakeLists.txt  fw64_arcball_camera.c  fw64_arcball_camera.h  fw64_asset_viewer.c  fw64_asset_viewer.h  fw64_billboard_node.c  fw64_billboard_node.h  fw64_bump_allocator_info.c  fw64_bump_allocator_info.h  fw64_character.c  fw64_character.h  fw64_character_animation_controller.c  fw64_character_animation_controller.h  fw64_character_controller.c  fw64_character_controller.h  fw64_character_info.c  fw64_character_info.h  fw64_collision_scene_manager.c  fw64_collision_scene_manager.h  fw64_debug_boxes.c  fw64_debug_boxes.h  fw64_debug_character.c  fw64_debug_character.h  fw64_file_downloader.c  fw64_file_downloader.h  fw64_fly_camera.c  fw64_fly_camera.h  fw64_fps_camera.c  fw64_fps_camera.h  fw64_headlight.c  fw64_headlight.h  fw64_media_file_picker.c  fw64_media_file_picker.h  fw64_mesh_prim_highlighter.c  fw64_mesh_prim_highlighter.h  fw64_rotate_node.c  fw64_rotate_node.h  fw64_scene_partition_default.c  fw64_scene_partition_default.h  fw64_skybox.c  (+14 more)
components/arcball_camera/: arcball_camera.c  arcball_camera.h
components/asset_viewer/: asset_viewer.c  asset_viewer.h
components/billboard_node/: billboard_node.c  billboard_node.h
components/debug_boxes/: debug_boxes.c
components/file_downloader/: file_downloader.c  file_downloader_message.h
components/file_explorer/: file_explorer.c  file_explorer.h
components/fps_camera/: fps_camera.c
components/media_file_picker/: media_file_picker.c  media_file_picker.h
components/ui_navigation/: ui_navigation.c  ui_navigation.h
examples/: CMakeLists.txt
examples/animation_attach/: CMakeLists.txt  assets.json  game.c  game.h
examples/arcball/: Makefile  arcball_camera.h  arcball_example.c  arcball_example.h  game.c  game.h  main.c  models.c  models.h  spec
examples/audio/: CMakeLists.txt  Makefile  audio.spec  game.c  game.h  spec
examples/audio_banks/: CMakeLists.txt  assets.json  audio_banks.spec  game.c  game.h
examples/audio_playback/: CMakeLists.txt  assets.json  audio_playback.spec  game.c  game.h
examples/billboard/: CMakeLists.txt  Makefile  assets.json  billboard.spec  billboard_example.c  billboard_example.h  flame.c  flame.h  fps_camera.c  game.c  game.h  layers.json  main.c  object.c  object.h  spec
examples/bounding/: CMakeLists.txt  Makefile  assets.json  bounding.spec  game.c  game.h  layers.json  spec
examples/camera/: CMakeLists.txt  assets.json  game.c  game.h
examples/character_animation/: CMakeLists.txt  assets.json  character_animation.spec  game.c  game.h
examples/collision_test/: CMakeLists.txt  assets.json  bomb_omb_battlefield.c  bomb_omb_battlefield.h  fw64_character.c  fw64_character.h  game.c  game.h  layers.json  player.c  player.h  star.c  star.h  star_collected.c  star_collected.h  ui.c  ui.h
examples/common/: CMakeLists.txt  entity.c  entity.h  flame.c  main_desktop.cpp  main_n64.c
examples/data/: CMakeLists.txt  Makefile  data.spec  data_example.c  data_example.h  game.c  game.h  main.c  spec
examples/data_link/: CMakeLists.txt  assets.json  game.c  game.h
examples/fill_rect/: CMakeLists.txt  assets.json  game.c  game.h
examples/fog/: CMakeLists.txt  assets.json  game.c  game.h
examples/image_formats/: CMakeLists.txt  assets.json  game.c  game.h
examples/input/: CMakeLists.txt  assets.json  game.c  game.h  input.spec
examples/level_tiles/: CMakeLists.txt  assets.json  game.c  game.h  layers.json
examples/lighting/: CMakeLists.txt  ambient_editor.c  ambient_editor.h  assets.json  color_editor.c  color_editor.h  game.c  game.h  light_editor.c  light_editor.h  material_editor.c  material_editor.h  mesh_picker.c  mesh_picker.h  ui.c  ui.h
examples/lines/: CMakeLists.txt  Makefile  game.c  game.h  lines.spec  lines_example.c  lines_example.h  main.c  object.c  object.h  spec
examples/material_collection/: CMakeLists.txt  README.md  assets.json  game.c  game.h
examples/media/: CMakeLists.txt  PrepareMediaDir.js  game.c  game.h  media_assets.json
examples/mesh_builder/: CMakeLists.txt  assets.json  game.c  game.h
examples/mesh_editor/: CMakeLists.txt  assets.json  game.c  game.h
examples/mesh_images/: CMakeLists.txt  assets.json  game.c  game.h
examples/minimal/: CMakeLists.txt  Makefile  assets.json  game.c  game.h  minimal.spec  spec
examples/pipeline_plugin/: CMakeLists.txt  README.md  assets.json  game.c  game.h
examples/post_draw/: CMakeLists.txt  assets.json  game.c  game.h
examples/project_unproject/: CMakeLists.txt  assets.json  game.c  game.h
examples/rendermodes/: CMakeLists.txt  Makefile  assets.json  game.c  game.h  main.c  rendermodes.spec  spec
examples/rumble/: CMakeLists.txt  assets.json  game.c  game.h
examples/save_file/: CMakeLists.txt  assets.json  game.c  game.h
examples/shading_modes/: CMakeLists.txt  assets.json  game.c  game.h
examples/simple_scene/: CMakeLists.txt  assets.json  chase_cam.c  game.c  (+14 more)
src/: CMakeLists.txt  allocator.c  animation_controller.c  animation_data.c  box.c  camera.c  collide.c  collider.c  collision.c  color.c  data_cache.c  display.c  frustum.c  level.c  math.c  matrix.c  matrix_project.c  mesh_instance.c  node.c  plane.c  project.c  quat.c  query.c  raycast.c  registry.c  scene.c  skinned_mesh_instance.c  sparse_set.c  static_vector.c  time.c  transform.c  vec2.c  vec3.c  vec4.c  viewport.c
tests/: CMakeLists.txt  test_box.cpp  test_bump_allocator.cpp  test_camera.cpp  test_data_cache.cpp  test_dynamic_vector.cpp  test_frustum.cpp  test_ray.cpp  test_sparse_set.cpp  test_sparse_set.h  test_sparse_set.hpp  test_transform.cpp  test_vec3.cpp
(+1029 files in other folders)
