add_subdirectory(common)

add_subdirectory(audio_banks)
add_subdirectory(audio_playback)
add_subdirectory(billboard)
add_subdirectory(bounding)
add_subdirectory(character_animation)
add_subdirectory(input)
add_subdirectory(minimal)
add_subdirectory(post_draw)
add_subdirectory(rendermodes)
add_subdirectory(rumble)
add_subdirectory(save_file)
add_subdirectory(simple_scene)
add_subdirectory(spin_cube)
add_subdirectory(split_screen)
add_subdirectory(sprites)
add_subdirectory(texparams)