add_subdirectory(common)

add_subdirectory(audio_banks)
add_subdirectory(audio_playback)
add_subdirectory(billboard)
add_subdirectory(bounding)
add_subdirectory(character_animation)
add_subdirectory(fill_rect)
add_subdirectory(fog)
add_subdirectory(image_formats)
add_subdirectory(input)
add_subdirectory(level_tiles)
add_subdirectory(mesh_images)
add_subdirectory(minimal)
add_subdirectory(post_draw)
add_subdirectory(shading_modes)
add_subdirectory(rumble)
add_subdirectory(save_file)
add_subdirectory(simple_scene)
add_subdirectory(spin_n64)
add_subdirectory(split_screen)
add_subdirectory(sprites)
add_subdirectory(texparams)